k8s/stateful-app/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: stateful-nginx
  namespace: apps

spec:
  selector:
    app: stateful-nginx

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
